--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,6 @@ nav {
 	background: #FD7E00;
 	color: white;
  	border-bottom: solid 10px #F0712A;
-
 }
 
 .body-wrapper {
@@ -28,13 +27,13 @@ nav {
 }
 
 nav ul {
-	float: right;
 	padding-top: 60px;
 }
 
 nav ul li {
 	display: inline-block;
-	padding-left: 50px;
+	padding-left: 37px;
+	float: right;
 }
 
 /**SEARCH**/
@@ -66,24 +65,24 @@ nav ul li {
 
 /**CONTENT**/
 section {
-	margin: 0 150px;
+	margin: 0 150px 50px 0;
 }
 
-section img {
+.section-left{
 	width: 50%;
 	float: left;
 	padding-top: 50px;
 	margin-bottom: 25px;
 }
 
-section div {
+.section-right div {
 	width: 50%;
 	float: right;
 	padding-top: 125px;
 	margin-bottom: 25px;
 }
 
-section div h1 {
+.section-right h1 {
 	font-size: 39px;
 	padding: 0 25px;
 }
@@ -110,10 +109,76 @@ section button {
 }
 
 footer {
-	height: 100px;
+	height: 130px;
 	background: #7FE5EA;
 	clear: both;
 }
+
+/**MEDIA**/
+
+@media (max-width: 1310px) {
+	nav ul li {
+		font-size: 13px;
+	}
+
+	.section-right {
+		padding-top: 92px;
+	}
+
+	.organge, .teal {
+		margin: 0 auto;
+	}
+	
+}
+
+@media (max-width: 1255px) {
+	nav ul {
+		width: 100%;
+	}
+
+	nav ul li {
+		padding-left: 10px;
+	}
+}
+
+@media (max-width: 1063px) {
+	nav  {
+		height: 200px;
+		margin: 0 auto;
+	}
+	nav ul {
+	    position: absolute;
+    	right: 48%;
+  	  	top: 5%;
+	}
+
+	.body-wrapper {
+		margin: 0 0;
+	}
+}
+
+@media (max-width: 1051px) {
+
+	.section-right, .section-left {
+		width: 100%;
+	}
+
+
+	.section-right h1 {
+		font-size: 30px;
+	}
+
+	.orange, .teal {
+		margin: 10px auto;
+		display: block;
+
+	}
+
+	.search-bar {
+		
+	}
+}
+
 
 
 
