--- a/css/main.css
+++ b/css/main.css
@@ -68,11 +68,18 @@ section {
 	margin: 0 150px 50px 0;
 }
 
+.no-wrap {
+	white-space: nowrap;
+}
+
 .section-left{
+	display: inline-block;
 	width: 50%;
-	float: left;
-	padding-top: 50px;
-	margin-bottom: 25px;
+}
+
+.section-right {
+	display: inline-block;
+	width: 50%;	
 }
 
 .section-right div {
@@ -175,8 +182,11 @@ footer {
 	}
 
 	.search-bar {
-		
+		float: none;
+		text-align: center;
 	}
+
+	.
 }
 
 
